--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "minimessageboard",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +25,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
+    "nodemon": "^2.0.22",
     "react-bootstrap": "^2.7.4"
-  }
+  },
+  "description": ""
 }
